<resources>
    <string name="app_name">Birritas</string>
    <string name="title_featured">Featured</string>
    <string name="title_map">Map</string>
    <string name="title_favorites">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_">Loading…</string>
    <string name="loading_error">Please, check your connection</string>
    <string name="beer_label_image">Beer label image</string>
    <string name="SRM">SRM</string>
    <string name="n_a">N/A</string>
    <string name="ABV">ABV</string>
    <string name="IBU">IBU</string>
    <string name="action_favorite">Mark as favorite</string>
    <string name="action_deleted">Deleted</string>
    <string name="no_favorites">No favorites found</string>
    <string name="brewed_by">Brewed by</string>
    <string name="style">Style</string>
    <string name="hyphen">-</string>
    <string name="since_established">Since %d</string>
    <string name="n_beers">%d BEERS</string>
    <string name="ingredients">Ingredients</string>
    <string name="search_hint">Search beer or brewery</string>
    <string name="header_beers">Beers</string>
    <string name="header_breweries">Breweries</string>
    <string name="no_results">No results found</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_activity_message">What kind of beers do you want to display in the widget?</string>
    <string name="retry">Retry</string>
    <string name="searching_breweries_in_area_">Searching for breweries in this area…</string>
    <string name="action_share">Share</string>
</resources>
