<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/widget_activity_message"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/TextAppearance.AppCompat.Subhead"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/featured"
            android:text="@string/title_featured"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored" />
        <Button
            android:id="@+id/favorites"
            android:text="@string/title_favorites"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>
</LinearLayout>